--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> welcome to <br> my page <span>.</span>   </h2>
 							<p>ux researcher and designer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<a href="assets/resume/Hila%20Sabouni%20-%20Resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
