--- a/index.html
+++ b/index.html
@@ -232,6 +232,29 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
+									<h2>2008 - 2010</h2>
+									<h3>master---- <span>of </span> computer science</h3>
+								</div><!--/.experience-time-->
+								<div class="timeline-horizontal-border">
+									<i class="fa fa-circle" aria-hidden="true"></i>
+									<span class="single-timeline-horizontal"></span>
+								</div>
+								<div class="timeline">
+									<div class="timeline-content">
+										<h4 class="title">
+											university of north carolina
+										</h4>
+										<h5>north carolina, USA</h5>
+										<p class="description">
+											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+										</p>
+									</div><!--/.timeline-content-->
+								</div><!--/.timeline-->
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="single-horizontal-timeline">
+								<div class="experience-time">
 									<h2>2004 - 2008</h2>
 									<h3>bachelor <span>of </span> computer science</h3>
 								</div><!--/.experience-time-->
