--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> welcome to <br> my page <span>.</span>   </h2>
-							<p>ux researcher and designer</p>
+							<h2>hi <span>,</span> i am hila <span>.</span>   </h2>
+							<p>a researcher, designer, and metor</p>
 							<a href="assets/resume/Hila%20Sabouni%20-%20Resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
