--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2>hi <span>,</span> i am hila <span>.</span>   </h2>
-							<p>a researcher, designer, and metor</p>
+							<p>a researcher, designer, and mentor</p>
 							<a href="assets/resume/Hila%20Sabouni%20-%20Resume.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
