--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 								<p>
 									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
 								</p>
-								<!--<div class="row">
+								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>phone</h3>
@@ -162,24 +162,24 @@
 												<i  class="fa fa-facebook" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
-										<li>
+										<!--<li>
 											<a href="#">
 												<i  class="fa fa-dribbble" aria-hidden="true"></i>
 											</a>
 											
 										</li><!-- / li -->
-										<li>
+										<!--<li>
 											<a href="#">
 												<i  class="fa fa-twitter" aria-hidden="true"></i>
 											</a>
 											
 										</li><!-- / li -->
-										<li>
+										<!--<li>
 											<a href="#">
 												<i  class="fa fa-linkedin" aria-hidden="true"></i>
 											</a>
 										</li><!-- / li -->
-										<li>
+										<!--<li>
 											<a href="#">
 												<i  class="fa fa-instagram" aria-hidden="true"></i>
 											</a>
