--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>website</h3>
-											<p>www.brownsine.com</p>
-										</div>-->
+											<p>www.brownsine.com</p>-->
+										</div>
 									</div>
 								</div>
 							</div>
