--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						<div class="col-sm-offset-1 col-sm-5">
 							<div class="single-about-img">
 								<img src="assets/images/about/profile_image.jpg" alt="profile_image">
-								<div class="about-list-icon">
+								<!--<div class="about-list-icon">
 									<ul>
 										<!--<li>
 											<a href="#">
