--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a Professional UI/UX Designer and Web developer. Consectetur an adipisi elita, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud.
+									
+I am a passionate researcher and designer committed to creating human-centered solutions that drive meaningful change. With a background in architecture, human-computer interaction, and immersive technologies, I excel at uncovering the deeper story behind each project, crafting purposeful research, and blending insights with creative design to solve complex challenges. My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
 								</h3>
-								<p>
+								<!--<p>
 									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
 								</p>
 								<!--<div class="row">
