--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							<div class="single-about-txt">
 								<h3>
 									
-I am a passionate researcher and designer committed to creating human-centered solutions that drive meaningful change. With a background spanning architecture, human-computer interaction, and immersive technologies, I excel at uncovering the deeper story behind each project, crafting purposeful research, and blending insights with creative design to solve complex challenges.
+I am a passionate researcher and designer with a deep understanding of the context behind every project. With a background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research, considering the social, cultural, and environmental factors that shape each experience. I blend research-driven insights with creative design to tackle complex challenges and craft innovative solutions that truly resonate with people.
 								</h3>
 								<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
