--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2008 - 2010</h2>
-									<h3>master <span>of </span> computer science</h3>
+									<h2>2023 - 2026(Expected)</h2>
+									<h3>PhD <span>in </span> Human Computer Interaction</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -219,10 +219,10 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<h4 class="title">
-											university of north carolina
+										<!--<h4 class="title">
+											Iowa State University
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
