--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2023 - 2026(Expected)</h2>
-									<h3>PhD <span>in </span> Human Computer Interaction</h3>
+									<h2>2012 - 2016(Expected)</h2>
+									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -219,9 +219,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!--<h4 class="title">
-											Iowa State University
-										</h4>
+										<h4 class="title">
+											Azad University
+										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
@@ -233,8 +233,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2008 - 2010</h2>
-									<h3>master---- <span>of </span> computer science</h3>
+									<h2>2020 - 2022</h2>
+									<h3>Master <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -243,9 +243,32 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
-										</h4>
+											Iowa State University
+										<!--</h4>
 										<h5>north carolina, USA</h5>
+										<p class="description">-->
+											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+										</p>
+									</div><!--/.timeline-content-->
+								</div><!--/.timeline-->
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="single-horizontal-timeline">
+								<div class="experience-time">
+									<h2>2022 - 2023</h2>
+									<h3>Master of Science <span>in </span> Human Camputer Interaction</h3>
+								</div><!--/.experience-time-->
+								<div class="timeline-horizontal-border">
+									<i class="fa fa-circle" aria-hidden="true"></i>
+									<span class="single-timeline-horizontal"></span>
+								</div>
+								<div class="timeline">
+									<div class="timeline-content">
+										<h4 class="title">
+											Iowa State University
+										<!--</h4>
+										<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
@@ -256,31 +279,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> computer science</h3>
-								</div><!--/.experience-time-->
-								<div class="timeline-horizontal-border">
-									<i class="fa fa-circle" aria-hidden="true"></i>
-									<span class="single-timeline-horizontal"></span>
-								</div>
-								<div class="timeline">
-									<div class="timeline-content">
-										<h4 class="title">
-											university of north carolina
-										</h4>
-										<h5>north carolina, USA</h5>
-										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-										</p>
-									</div><!--/.timeline-content-->
-								</div><!--/.timeline-->
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="single-horizontal-timeline">
-								<div class="experience-time">
-									<h2>2004 - 2008</h2>
-									<h3>bachelor <span>of </span> creative design</h3>
+									<h2>2023 - 2026(expected)</h2>
+									<h3>PhS <span>in </span> Human Computer Interaction</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
