--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<h4 class="title">
 											Iowa State University
 										<!--</h4>
-										<h5>north carolina, USA</h5>
-										<p class="description">-->
+										<h5>north carolina, USA</h5>-->
+										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
 									</div><!--/.timeline-content-->
