--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2023 - 2026(expected)</h2>
-									<h3>PhS <span>in </span> Human Computer Interaction</h3>
+									<h3>PhD <span>in </span> Human Computer Interaction</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -290,9 +290,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of bolton
-										</h4>
-										<h5>bolton, united kingdome</h5>
+											Iowa State University
+										<!--</h4>
+										<h5>bolton, united kingdome</h5>-->
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
