--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2022 - 2023</h2>
-									<h3>Master of Science <span>in </span> Human Camputer Interaction</h3>
+									<h3>Master of Science <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -280,7 +280,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2023 - 2026(expected)</h2>
-									<h3>PhD <span>in </span> Human Computer Interaction</h3>
+									<h3>PhD <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
