--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2012 - 2016(Expected)</h2>
+									<h2>2012 - 2016</h2>
 									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -224,7 +224,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -247,7 +247,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											Concentrated on advanced spatial design, user behavior analysis,, and the integration of technology and sustainability.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -270,7 +270,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+											Explored the impact of sensory cues on user attentional orientation in virtual reality to identify the most effective cues for guiding users through immersive environments. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
