--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 		<!--portfolio end -->
 
 		<!--clients start -->
-		<section id="clients" class="clients">
+		<!--<section id="clients" class="clients">
 			<div class="section-heading text-center">
 				<h2>clients</h2>
 			</div>
