--- a/index.html
+++ b/index.html
@@ -805,32 +805,32 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								<img src="assets/images/clients/c1.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c2.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c3.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c4.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c5.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c6.png" alt="brand-image" />
 							</a>
 						</div><!--/.item-->
-						<div class="item">
+						<!--<div class="item">
 							<a href="#">
 								<img src="assets/images/clients/c7.png" alt="brand-image" />
 							</a>
