--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
 				<h2>contact me</h2>
-			</div>
+			<!--</div>
 			<div class="container">
 				<div class="contact-content">
 					<div class="row">
@@ -862,27 +862,27 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												  <input type="text" class="form-control" id="name" placeholder="Name*" name="name">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
-											<div class="col-sm-6 col-xs-12">
+											<!--<div class="col-sm-6 col-xs-12">
 												<div class="form-group">
 													<input type="email" class="form-control" id="email" placeholder="Email*" name="email">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
-										<div class="row">
+										<!--<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
 													<input type="text" class="form-control" id="subject" placeholder="Subject" name="subject">
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
-										<div class="row">
+										<!--<div class="row">
 											<div class="col-sm-12">
 												<div class="form-group">
 													<textarea class="form-control" rows="8" id="comment" placeholder="Message" ></textarea>
 												</div><!--/.form-group-->
 											</div><!--/.col-->
 										</div><!--/.row-->
-										<div class="row">
+										<!--<div class="row">
 											<div class="col-sm-12">
 												<div class="single-contact-btn">
 													<a class="contact-btn" href="#" role="button">submit</a>
