--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 		<!--clients end -->
 
 		<!--contact start -->
-		<section id="contact" class="contact">
+		<!--<section id="contact" class="contact">
 			<div class="section-heading text-center">
 				<h2>contact me</h2>
 			<!--</div>
@@ -893,7 +893,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								</div><!--/.contact-form-->
 							</div><!--/.single-contact-box-->
 						</div><!--/.col-->
-						<div class="col-md-offset-1 col-md-5 col-sm-6">
+						<!--<div class="col-md-offset-1 col-md-5 col-sm-6">
 							<div class="single-contact-box">
 								<div class="contact-adress">
 									<div class="contact-add-head">
@@ -915,13 +915,13 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div>
 								</div><!--/.contact-adress-->
-								<div class="hm-foot-icon">
+								<!--<div class="hm-foot-icon">
 									<ul>
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
+										<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
+										<!--<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
+										<!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+										<!--<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
 							</div><!--/.single-contact-box-->
