--- a/index.html
+++ b/index.html
@@ -932,6 +932,20 @@ I am a passionate researcher and designer with a deep understanding of the conte
 
 		</section><!--/.contact-->
 		<!--contact end -->
+		<!-- Contact Start -->
+		<section id="contact" class="contact">
+			<div class="section-heading text-center">
+				<h2>Contact Me</h2>
+			</div>
+			<div class="container text-center">
+				<p>
+					<strong>Your Name</strong> | 
+					<a href="mailto:your.email@example.com">your.email@example.com</a> | 
+					<a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a>
+				</p>
+			</div>
+		</section>
+		<!-- Contact End -->
 
 		<!--footer-copyright start-->
 		<footer id="footer-copyright" class="footer-copyright">
