--- a/index.html
+++ b/index.html
@@ -932,6 +932,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 
 		</section><!--/.contact-->
 		<!--contact end -->
+		
 		<!-- Contact Start -->
 		<section id="contact" class="contact">
 			<div class="section-heading text-center">
@@ -939,9 +940,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 			</div>
 			<div class="container text-center">
 				<p>
-					<strong>Your Name</strong> | 
-					<a href="mailto:your.email@example.com">your.email@example.com</a> | 
-					<a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a>
+					<strong>Hila Sabouni</strong> | 
+					<a href="mailto:hsabouni@iastate.edu">your.email@example.com</a> | 
+					<a href="https://www.linkedin.com/in/hilasabouni" target="_blank">LinkedIn Profile</a>
 				</p>
 			</div>
 		</section>
