--- a/index.html
+++ b/index.html
@@ -941,8 +941,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 			<div class="container text-center">
 				<p>
 					<strong>Hila Sabouni</strong> | 
-					<a href="mailto:hsabouni@iastate.edu">your.email@example.com</a> | 
-					<a href="https://www.linkedin.com/in/hilasabouni" target="_blank">LinkedIn Profile</a>
+					<a href="mailto:your.email@example.com">hsabouni@iastate.edu</a> |  
+					<a href="https://www.linkedin.com/in/yourprofile" target="_blank">www.linkedin.com/in/hilasabouni</a>
 				</p>
 			</div>
 		</section>
