--- a/index.html
+++ b/index.html
@@ -939,6 +939,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 				<h2>Contact Me</h2>
 			</div>
 			<div class="container text-center">
+				<div class="row">
 				<p>
 					<strong>Hila Sabouni</strong> | 
 					<a href="mailto:your.email@example.com">hsabouni@iastate.edu</a> |  
