--- a/index.html
+++ b/index.html
@@ -938,8 +938,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 			<div class="section-heading text-center">
 				<h2>Contact Me</h2>
 			</div>
-			<div class="container text-center">
-				<div class="row">
+			<div class="container text-center" style="margin-top: 20px;">
 				<p>
 					<strong>Hila Sabouni</strong> | 
 					<a href="mailto:your.email@example.com">hsabouni@iastate.edu</a> |  
