--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2012 - 2013
+														May2023 - July2023
 													</h2>
-													<h3>UI/UX designer</h3>
+													<h3>Research Mentor & Modeling Teacher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -613,8 +613,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2010 - 2012</h2>
-													<h3>frontend developer</h3>
+													<h2>Jan2022 - Aug2022</h2>
+													<h3>Architect Intern</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -624,7 +624,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															hoplony tech limited
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>Pella, AI, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -640,7 +640,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2016 - 2018</h2>
+													<h2>May2016 - Nov2018</h2>
 													<h3>founder, owner, designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
