--- a/index.html
+++ b/index.html
@@ -599,9 +599,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2012 - 2013
+														May2023 - July2023
 													</h2>
-													<h3>UI/UX designer</h3>
+													<h3>Research Mentor & Modeling Teacher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
