--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<h4 class="title">
 															hoplony tech limited
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -534,9 +534,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2016 - 2018
+														Aug2022 - May2024
 													</h2>
-													<h3>associate design director</h3>
+													<h3>University Instructor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -548,8 +548,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>2013 - 2016</h2>
-													<h3>senior UI/UX designer</h3>
+													<h2>Aug2022 - Dec2023</h2>
+													<h3>UX Researcher and Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -559,7 +559,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															hoplony tech limited
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
