--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2016 - 2018
+														Aug2023 - May2025
 													</h2>
-													<h3>associate design director</h3>
+													<h3>Researcher & Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -447,7 +447,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<h4 class="title">
 															hoplony tech limited
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -458,9 +458,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														2016 - 2018
+														May2024 - July2024
 													</h2>
-													<h3>associate design director</h3>
+													<h3>Research Mentor & Modeling Teacher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -485,7 +485,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<h4 class="title">
 															hoplony tech limited
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
