--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ch<!doctype html>
 <html class="no-js" lang="en">
 
     <head>
@@ -438,7 +438,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														Aug2023 - May2025
 													</h2>
-													<h3>Researcher & Designer</h3>
+													<h3>UX Researcher & Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -458,9 +458,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														May2024 - July2024
+														Aug2023 - May2025
 													</h2>
-													<h3>Research Mentor & Modeling Teacher</h3>
+													<h3>UX Researcher & Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
