--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Aug2023 - May2025
+														May2024 - July2024
 													</h2>
-													<h3>Researcher & designer</h3>
+													<h3>Research Mentor & Modeling Teacher</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
