--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2024 - July2024
 													</h2>
-													<h3>Research Mentor & Modeling Teacher</h3>
+													<h3>Research & 3-D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -498,7 +498,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2024 - July2024
 													</h2>
-													<h3>Research Mentor & Modeling Teacher</h3>
+													<h3>Research & 3-D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
@@ -579,7 +579,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2023 - July2023
 													</h2>
-													<h3>Research Mentor & Modeling Teacher</h3>
+													<h3>Research & 3-D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -601,7 +601,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2023 - July2023
 													</h2>
-													<h3>Research Mentor & Modeling Teacher</h3>
+													<h3>Research & 3-D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
