--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2023 - July2023
 													</h2>
-													<h3>Research & 3-D Modeling Mentor</h3>
+													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -601,7 +601,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 														May2023 - July2023
 													</h2>
-													<h3>Research & 3-D Modeling Mentor</h3>
+													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
