--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														</h4>
 														<h5>Pella, AI, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Duis aute irure dolor in  in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
