--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="experience-time text-left">
 													<h2>Aug2022 - Dec2023</h2>
 													<h3>UX Researcher and Designer</h3>
 												</div><!--/.experience-time-->
@@ -562,7 +562,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-														</p>
+															</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
 											</div><!--/.col-->
