--- a/index.html
+++ b/index.html
@@ -544,6 +544,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								</li>
 								
 								<li>
+									dir="rtl">
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
