--- a/index.html
+++ b/index.html
@@ -543,8 +543,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									</div><!--/.single-timeline-box-->
 								</li>
 								
-								<li>
-									dir="rtl">
+								<li dir="rtl">
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
