--- a/index.html
+++ b/index.html
@@ -543,20 +543,22 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									</div><!--/.single-timeline-box-->
 								</li>
 								
-								<li dir="rtl">
+								<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
-											<div class="col-md-5">
-												<div class="experience-time text-left">
-													<h2>Aug2022 - Dec2023</h2>
+											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
+												<div class="experience-time text-right">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Aug2022 - Dec2023
+													</h2>
 													<h3>UX Researcher and Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<div class="col-md-5">
 												<div class="timeline">
-													<div class="timeline-content">
+													<div class="timeline-content text-right">
 														<h4 class="title">
-															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															hoplony tech limited
 														</h4>
 														<h5>Ames, IA, USA</h5>
