--- a/index.html
+++ b/index.html
@@ -547,12 +547,12 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-												<div class="experience-time text-right">
+												<div class="experience-time">
 													<h2>
 														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Aug2022 - Dec2023
+														Aug2022 – Dec2023
 													</h2>
-													<h3>UX Researcher and Designer</h3>
+													<h3>UX Researcher & Designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-5">
@@ -564,9 +564,18 @@ I am a passionate researcher and designer with a deep understanding of the conte
 														<h5>Ames, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-															</p>
+														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5 experience-time-main">
+												<div class="experience-time">
+													<h2>
+														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+														Aug2022 - Dec2023
+													</h2>
+													<h3>UX Researcher & Designer</h3>
+												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
 									</div><!--/.single-timeline-box-->
