--- a/index.html
+++ b/index.html
@@ -432,36 +432,25 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
-											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-												<div class="experience-time">
-													<h2>
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Aug2023 - May2025
-													</h2>
-													<h3>UX Researcher & Designer</h3>
+											<div class="col-md-5">
+												<div class="experience-time text-right">
+													<h2>May2016 - Nov2018</h2>
+													<h3>founder, owner, designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
-											<div class="col-md-5">
+											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
-													<div class="timeline-content text-right">
+													<div class="timeline-content">
 														<h4 class="title">
-															hoplony tech limited
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															Risen Design Architecture Studio
 														</h4>
-														<h5>Ames, IA, USA</h5>
+														<h5>Iran</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
-											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5 experience-time-main">
-												<div class="experience-time">
-													<h2>
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														Aug2023 - May2025
-													</h2>
-													<h3>UX Researcher & Designer</h3>
-												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
 									</div><!--/.single-timeline-box-->
