--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2016 - Nov2018</h2>
-													<h3>founder, owner, designer</h3>
+													<h2>Aug2023 – May2025</h2>
+													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -443,9 +443,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Risen Design Architecture Studio
+															NSF-Funded Cybersecurity Research 
 														</h4>
-														<h5>Iran</h5>
+														<h5>IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -461,8 +461,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2016 - Nov2018</h2>
-													<h3>founder, owner, designer</h3>
+													<h2>May2024 – Jul2024</h2>
+													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -470,9 +470,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Risen Design Architecture Studio
+															Iowa State University
 														</h4>
-														<h5>Iran</h5>
+														<h5>Ai, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -488,8 +488,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2016 - Nov2018</h2>
-													<h3>founder, owner, designer</h3>
+													<h2>Aug2022 – May2024</h2>
+													<h3>University Instructor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -497,9 +497,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Risen Design Architecture Studio
+															Iowa State University
 														</h4>
-														<h5>Iran</h5>
+														<h5>AI, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -515,8 +515,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<div class="row">
 											<div class="col-md-5">
 												<div class="experience-time text-right">
-													<h2>May2016 - Nov2018</h2>
-													<h3>founder, owner, designer</h3>
+													<h2>Aug2022 – Dec2023</h2>
+													<h3>UX researcher & designer</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -524,9 +524,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Risen Design Architecture Studio
+															Iowa State University
 														</h4>
-														<h5>Iran</h5>
+														<h5>IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -540,36 +540,25 @@ I am a passionate researcher and designer with a deep understanding of the conte
 								<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
-											<div class="col-md-offset-1 col-md-5 experience-time-responsive">
-												<div class="experience-time">
-													<h2>
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														May2023 - July2023
-													</h2>
+											<div class="col-md-5">
+												<div class="experience-time text-right">
+													<h2>May2023 – Jul2023</h2>
 													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.experience-time-->
 											</div><!--/.col-->
-											<div class="col-md-5">
+											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
-													<div class="timeline-content text-right">
+													<div class="timeline-content">
 														<h4 class="title">
-															hoplony tech limited
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															Iowa State University
 														</h4>
-														<h5>newyork, USA</h5>
+														<h5>IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
-											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5 experience-time-main">
-												<div class="experience-time">
-													<h2>
-														<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-														May2023 - July2023
-													</h2>
-													<h3>Research & 3D Modeling Mentor</h3>
-												</div><!--/.experience-time-->
 											</div><!--/.col-->
 										</div>
 									</div><!--/.single-timeline-box-->
@@ -589,7 +578,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															hoplony tech limited
+															Klingner & Associates, PC 
 														</h4>
 														<h5>Pella, AI, USA</h5>
 														<p class="description">
