--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Iowa State University
+															NSF REU (Research Experience for Undergrads)
 														</h4>
-														<h5>Ai, USA</h5>
+														<h5>Iowa State University, Ai, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -497,9 +497,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Iowa State University
+															Architecture Studio Course
 														</h4>
-														<h5>AI, USA</h5>
+														<h5>Iowa State University, AI, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -524,9 +524,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Iowa State University
+															Master Thesis on Sensory Cues Virtual Reality
 														</h4>
-														<h5>IA, USA</h5>
+														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -551,9 +551,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Iowa State University
+															NSF REU (Research Experience for Undergrads)
 														</h4>
-														<h5>IA, USA</h5>
+														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
