--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															NSF-Funded Cybersecurity Research 
 														</h4>
-														<h5>IA, USA</h5>
+														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
 															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 														</p>
@@ -524,7 +524,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Master Thesis on Sensory Cues Virtual Reality
+															Master Thesis on Sensory Cues in Virtual Reality
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
