--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">adobe photoshop</span>
+										<span class="progressText">Research Method: interview, survey, focus group, content analysis, literature review</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -329,7 +329,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">adobe illustrator</span>
+										<span class="progressText">Analysis Method: persona creation, regression, theme analysis, task analysis, regression, correlation, Anova, T-test</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -340,7 +340,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">adobe after effects</span>
+										<span class="progressText">Tool kit: SPSS, qualtrics, miro, Excel, Unity, Blender</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -377,7 +377,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">css 3 animation</span>
+										<span class="progressText">Communication: story telling, technical communication, cross-functional collaboration, public speaking</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
