--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">Research Method: interview, survey, focus group, content analysis, literature review</span>
+										<span class="progressText">Qualitative research</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -329,7 +329,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Analysis Method: persona creation, regression, theme analysis, task analysis, regression, correlation, Anova, T-test</span>
+										<span class="progressText">Quantitative research</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -340,7 +340,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Tool kit: SPSS, qualtrics, miro, Excel, Unity, Blender</span>
+										<span class="progressText">Unity</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -351,7 +351,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">sketch</span>
+										<span class="progressText">Blender</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -366,7 +366,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 							<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
-										<span class="progressText">html 5</span>
+										<span class="progressText">Idea Generation</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 												<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
@@ -377,7 +377,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">Communication: story telling, technical communication, cross-functional collaboration, public speaking</span>
+										<span class="progressText">Concept diagramming</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="10" aria-valuemax="100" style="">
@@ -388,7 +388,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText">communication</span>
+										<span class="progressText">Project Planning and Time Management</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100" style="">
@@ -399,7 +399,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										</div>
 									</div><!-- /.barWrapper -->
 									<div class="barWrapper">
-										<span class="progressText"> creativity</span>
+										<span class="progressText"> Cross-functional Teamwork</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
 											   <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="10" aria-valuemax="100" style="">
