--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
+											<h3>Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.</h3>
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
