--- a/portfolio1.html
+++ b/portfolio1.html
@@ -98,7 +98,7 @@
 		<!-- top-area End -->
 	
 		<!--welcome-hero start -->
-		<section id="welcome-hero" class="welcome-hero">
+		<!--<section id="welcome-hero" class="welcome-hero">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
