--- a/portfolio1.html
+++ b/portfolio1.html
@@ -126,7 +126,11 @@
 							<div class="single-about-txt">
 								<h3>
 									
-I am a passionate researcher and designer with a deep understanding of the context behind every project. With a background in architecture, human-computer interaction, and immersive technologies, I specialize in human-centered research, considering the social, cultural, and environmental factors that shape each experience. I blend research-driven insights with creative design to tackle complex challenges and craft innovative solutions that truly resonate with people.
+Introduction
+Virtual reality (VR) offers immersive experiences in areas like training and education, but effective guidance cues are needed to maintain immersion. Designing these cues to support user navigation without breaking presence is challenging.
+
+Problem Statement
+This study evaluates passive (rear-view mirror) and active (audio and haptic) guidance cues in a VR scavenger hunt task. By assessing their effects on user performance and immersion, this research provides insights into optimal guidance design for VR environments.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
