--- a/portfolio1.html
+++ b/portfolio1.html
@@ -78,7 +78,7 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                    <li class=" smooth-menu"><a href="#education">education</a></li>
+			                    <li class=" smooth-menu"><a href="#method">metho9d</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
 			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
@@ -203,13 +203,13 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		</section><!--/.about-->
 		<!--about end -->
 		
-		<!--education start -->
-		<section id="education" class="education">
+		<!--method start -->
+		<!<section id="method" class="method">
 			<div class="section-heading text-center">
-				<h2>education</h2>
+				<h2>Method</h2>
 			</div>
 			<div class="container">
-				<div class="education-horizontal-timeline">
+				<div class="method-horizontal-timeline">
 					<div class="row">
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
@@ -308,8 +308,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 				</div>
 			</div>
 
-		</section><!--/.education-->
-		<!--education end -->
+		</section><!--/.method-->
+		<!--Method end -->
 
 		<!--skills start -->
 		<section id="skills" class="skills">
